# PAG

./: CMakeLists.txt  README.md  build.py  run.sh
assets/: indexing-time-small-efc.md
cosine/: CMakeLists.txt  main.cpp  pag.cpp
cosine/hnswlib/: hnswalg.h  paglib.h
l2/: CMakeLists.txt  main.cpp  pag.cpp
l2/hnswlib/: hnswalg.h  paglib.h  space_ip.h  space_l2.h
scripts/: plot_logs.py  verify_gt.py
tools/: CMakeLists.txt  xbin2xvecs.cpp
